--- a/app/src/main/res/layout/row_list_item.xml
+++ b/app/src/main/res/layout/row_list_item.xml
@@ -1,53 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="100dp"
-              android:layout_margin="5dp"
-              android:background="@color/note_back">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:layout_margin="4dp"
+    app:cardBackgroundColor="@color/note_back"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="4dp">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="5"
-        android:background="@color/note_back"
-        android:orientation="vertical"
-        android:weightSum="3">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/noteListTitle"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="2dp"
-            android:layout_weight="2"
-            android:background="@color/note_back"
-            android:gravity="left|center"
-            android:paddingLeft="15dp"
-            android:text="TITLE"
-            android:textSize="22sp"
-            android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/noteListCreated"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:orientation="vertical"
+            android:weightSum="3">
+
+            <TextView
+                android:id="@+id/noteListTitle"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="2dp"
+                android:layout_weight="2"
+                android:fontFamily="sans-serif"
+                android:gravity="left|center"
+                android:paddingLeft="15dp"
+                android:text="@string/title"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                tools:ignore="NestedWeights,RtlHardcoded,RtlSymmetry,UnusedAttribute"/>
+
+            <TextView
+                android:id="@+id/noteListCreated"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-condensed"
+                android:gravity="left|center"
+                android:paddingLeft="15dp"
+                android:text="@string/date"
+                android:textSize="18sp"
+                android:textStyle="italic"
+                tools:ignore="RtlHardcoded,RtlSymmetry"
+                tools:targetApi="jelly_bean"/>
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/handle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
             android:layout_weight="1"
-            android:background="@color/note_back"
-            android:gravity="left|center"
-            android:paddingLeft="15dp"
-            android:text="Date"
-            android:textSize="18sp"
-            android:textStyle="italic"/>
-    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/handle"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
-        android:background="@color/note_back"
-        android:src="@drawable/ic_reorder_black_48px"/>
-</LinearLayout>
+            android:src="@drawable/ic_reorder_black_48px"
+            tools:ignore="ContentDescription"/>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
 
 
 
