--- a/app/src/main/res/layout/row_todo_list.xml
+++ b/app/src/main/res/layout/row_todo_list.xml
@@ -1,61 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="100dp"
-              android:layout_margin="5dp"
-              android:background="@color/note_back"
-              android:orientation="horizontal">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="90dp"
+    android:layout_margin="4dp"
+    app:cardBackgroundColor="@color/note_back"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="4dp">
+
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="5"
-        android:background="@color/note_back"
-        android:orientation="vertical"
-        android:weightSum="3">
+        android:orientation="horizontal">
 
-        <CheckBox
-            android:id="@+id/todoListcheckbox"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="left|center"
-            android:layout_margin="2dp"
-            android:layout_weight="2"
-            android:clickable="false"
-            android:focusable="false"
-            android:fontFamily="sans-serif"
-            android:paddingLeft="20dp"
-            android:text="ToDo Items"
-            android:textSize="22sp"
-            android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:orientation="vertical"
+            android:weightSum="3">
 
-        <TextView
-            android:id="@+id/todoListTitle"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            <CheckBox
+                android:id="@+id/todoListcheckbox"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="left|center"
+                android:layout_margin="2dp"
+                android:layout_weight="2"
+                android:checked="false"
+                android:clickable="false"
+                android:focusable="false"
+                android:fontFamily="sans-serif"
+                android:paddingLeft="20dp"
+                android:text="ToDo Items"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                tools:ignore="HardcodedText,NestedWeights,RtlHardcoded,RtlSymmetry,UnusedAttribute"/>
+
+            <TextView
+                android:id="@+id/todoListTitle"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:fontFamily="sans-serif-condensed"
+                android:gravity="left|center"
+                android:paddingLeft="20dp"
+                android:text="Date"
+                android:textColor="@color/primary"
+                android:textSize="18sp"
+                android:textStyle="italic"
+                android:visibility="gone"
+                tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,UnusedAttribute"/>
+
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/handle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/primary"
-            android:fontFamily="sans-serif-condensed"
-            android:gravity="left|center"
-            android:paddingLeft="20dp"
-            android:text="Date"
-            android:textSize="18sp"
-            android:textStyle="italic"
-            android:visibility="gone"
-            />
-
-
+            android:contentDescription="Moving handle"
+            android:src="@drawable/ic_reorder_black_48px"
+            tools:ignore="HardcodedText"/>
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/handle"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@color/note_back"
-        android:contentDescription="Moving handle"
-        android:src="@drawable/ic_reorder_black_48px"/>
-</LinearLayout>
+</android.support.v7.widget.CardView>
 
 
 
